syntax = "proto3";

import "Protos/models.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "IdiomsService.Protos";

package idiom;

service User {
  rpc GetUserProfile (GetUserProfileRequest) returns (UserProfileReply);
  rpc Register (RegisterRequest) returns (UserCredentialsReply);
  rpc Login (LoginRequest) returns (UserCredentialsReply);
  rpc ChangeUser (ChangeUserRequest) returns (UserProfileReply);
  rpc AddUserLangueage (AddUserLanguageRequest) returns (UserProfileReply);
  rpc DeleteUserLanguage (DeleteUserLanguageRequest) returns (UserProfileReply);
}

message GetUserProfileRequest {
  int32 user_id = 1;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message UserCredentialsReply {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  bool is_google = 4;
  string token = 5;
  string refresh_token = 6;
  int32 role_id = 7;
  string image_url = 8;
}

message ChangeUserRequest {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message AddUserLanguageRequest {
  int32 language_id = 1;
}

message DeleteUserLanguageRequest {
  int32 language_id = 1;
}

message UserProfileReply {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  repeated LanguageReply user_languages = 4;
  string image_url = 5;
  google.protobuf.Timestamp date_joined = 6;
  int32 upvotes = 7;
  int32 favorites = 8;
  int32 comments = 9;
  int32 idioms_count = 10;
  int32 likes = 11;
  int32 dislikes = 12;
}